fix(tabs): scrollbar appear when tablist height is small
Fix scrollbar appear when custom tablist height is smaller than
touch target size

--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -19,7 +19,7 @@ $_tabs: tokens.$flexy-comp-tabs;
   gap: map.get($_tabs, 'tablist-spacing');
   height: map.get($_tabs, 'tablist-height');
   margin-bottom: map.get($_tabs, 'tablist-divider-margin');
-  overflow-x: auto;
+  overflow: auto hidden;
   padding: 0px
     calc(
       (map.get($_tabs, 'tablist-height') - map.get($_tabs, 'tab-height')) / 2
